--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ header.navbar {
     overflow: hidden;
 }
 
-.parallax {
+.hero-img {
     height: 100%;
     width: 100%;
     position: absolute;
@@ -70,7 +70,7 @@ header.navbar {
     left: 0;
 }
 
-.parallax .background {
+.hero-img .background {
     position: absolute;
     top: 0;
     left: 0;
@@ -81,7 +81,7 @@ header.navbar {
     transform: scale(2);
 }
 
-.parallax .foreground {
+.hero-img .foreground {
     position: absolute;
     top: 40%;
     left: 50%;
