--- a/styles.css
+++ b/styles.css
@@ -380,7 +380,7 @@ header.navbar {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: left;
+    /* text-align: left; */
 
     padding: 20px;
     box-sizing: border-box;
@@ -415,4 +415,86 @@ header.navbar {
 
 .content6 a.button {
     margin: auto auto 3.6% auto;
+}
+
+/* 
+Plans Section */
+
+.plans {
+    height: 90vh;
+    background-color: #191c1f;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+}
+
+.content7 {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    max-width: 72%;
+    margin: auto;
+}
+
+.sub {
+    height: 31vh;
+    border-radius: 3vb;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    text-align: left;
+    flex-direction: column;
+    gap: 20px;
+    padding: 25% 10%;
+    /* max-width: 72%; */
+    margin: auto;
+}
+
+.subs1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 130vh;
+    gap: 2%;
+    color: black;
+    /* margin: 1%; */
+}
+
+.subs2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 130vh;
+    gap: 2%;
+    color: black;
+    /* margin: 1%; */
+}
+
+.plans h1 {
+    font-size: 2.5rem;
+    margin: 2.5rem 0;
+    font-weight: normal;
+    font-weight: lighter;
+}
+
+.plans p {
+    font-size: 1rem;
+    margin: 0;
+
+    line-height: 1.2;
+    font-weight: lighter;
+}
+
+.sub span {
+    font-size: 1.2rem;
+    font-weight: bold;
+    display: flex;
+    justify-content: end;
+    text-align: end;
+}
+
+.sub span a {
+    text-decoration: none;
+    color: black;
 }
