--- a/styles.css
+++ b/styles.css
@@ -498,3 +498,82 @@ Plans Section */
     text-decoration: none;
     color: black;
 }
+
+/* Footer Section */
+
+footer {
+    text-align: left;
+    padding: 50px;
+    background-color: #191c1f;
+    color: #fff;
+}
+
+footer h2 {
+    color: #bbbbbb;
+    margin-left: 13%;
+}
+
+footer h1 {
+    font-size: 2.5rem;
+    margin: 2% 13%;
+}
+
+footer button {
+    background-color: white;
+    color: black;
+    margin-left: 13%;
+    border: none;
+    padding: 15px 25px;
+    border-radius: 25px;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.subfooter {
+    background-color: #191c1f;
+    padding: 40px 20px;
+}
+
+.footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: auto 15%;
+}
+
+.footer-section h3 {
+    font-size: 1.2rem;
+    margin-bottom: 15px;
+    color: #fff;
+}
+
+.footer-section ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.footer-section ul li {
+    margin-bottom: 10px;
+}
+
+.footer-section ul li a {
+    color: #bbbbbb;
+    text-decoration: none;
+    font-size: 0.9rem;
+}
+
+.footer-section ul li a:hover {
+    color: white;
+}
+
+.last-footer{
+    background-color: #191c1f;
+    display: flex;
+    justify-content: end;
+}
+
+.content10 {
+    display: flex;
+    justify-content: center;
+    margin: 0 15% 2% 15%;
+}
